antlrjs/antlr/BKOOLParser.js
// Generated from BKOOL.g4 by ANTLR 4.5.1
// jshint ignore: start
var antlr4 = require('antlr4/index');
var BKOOLListener = require('./BKOOLListener').BKOOLListener;
var grammarFileName = "BKOOL.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ 'null', "'class'", "'extends'", "'='", "':'", "','", 
                     "'integer'", "'bool'", "'float'", "'string'", "'void'", 
                     "'['", "']'", "'>'", "'<'", "'>='", "'<='", "'=='", 
                     "'<>'", "'&&'", "'||'", "'+'", "'-'", "'*'", "'\\'", 
                     "'/'", "'%'", "'^'", "'!'", "'new'", "'self'", "'null'", 
                     "'.'", "'if'", "'then'", "'else'", "'while'", "'do'", 
                     "':='", "'break'", "'continue'", "'return'", 'null', 
                     "'static'", "'final'", 'null', 'null', "';'", 'null', 
                     'null', 'null', 'null', 'null', 'null', "'{'", "'}'", 
                     "'('", "')'" ];

var symbolicNames = [ 'null', 'null', 'null', 'null', 'null', 'null', 'null', 
                      'null', 'null', 'null', 'null', 'null', 'null', 'null', 
                      'null', 'null', 'null', 'null', 'null', 'null', 'null', 
                      'null', 'null', 'null', 'null', 'null', 'null', 'null', 
                      'null', 'null', 'null', 'null', 'null', 'null', 'null', 
                      'null', 'null', 'null', 'null', 'null', 'null', 'null', 
                      "KW", "KW_STATIC", "KW_FINAL", "OP", "OP2", "DELI_SEMI", 
                      "DELI", "BOOL_LIT", "FLOAT_LIT", "INT_LIT", "STR_LIT", 
                      "ID", "LP", "RP", "LB", "RB", "WS", "LINE_CMT", "BLOCK_CMT", 
                      "OTHER" ];

var ruleNames =  [ "program", "class_def", "class_memlist", "class_attr", 
                   "class_attr_nonstatic", "class_attr_types", "decl_const", 
                   "decl_var", "id_list", "decl_method", "param_list", "type_all", 
                   "type_primitives", "type_void", "type_array", "type_array_elem", 
                   "type_class", "expr_def", "expr_relational", "expr_bool", 
                   "expr_arithmetic_addbin", "expr_arithmetic_mulbin", "expr_string", 
                   "expr_bool_not", "expr_arithmetic_add", "expr_index", 
                   "expr_member_access_params", "expr_member_access", "expr_object_creation", 
                   "expr_term", "expr_fragment_index", "expr_fragment_memaccess", 
                   "stmt_all", "stmt_block", "stmt_if", "stmt_while", "stmt_assign", 
                   "stmt_lefthand", "stmt_break", "stmt_continue", "stmt_return", 
                   "stmt_method_invocation" ];

function BKOOLParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

BKOOLParser.prototype = Object.create(antlr4.Parser.prototype);
BKOOLParser.prototype.constructor = BKOOLParser;

Object.defineProperty(BKOOLParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

BKOOLParser.EOF = antlr4.Token.EOF;
BKOOLParser.T__0 = 1;
BKOOLParser.T__1 = 2;
BKOOLParser.T__2 = 3;
BKOOLParser.T__3 = 4;
BKOOLParser.T__4 = 5;
BKOOLParser.T__5 = 6;
BKOOLParser.T__6 = 7;
BKOOLParser.T__7 = 8;
BKOOLParser.T__8 = 9;
BKOOLParser.T__9 = 10;
BKOOLParser.T__10 = 11;
BKOOLParser.T__11 = 12;
BKOOLParser.T__12 = 13;
BKOOLParser.T__13 = 14;
BKOOLParser.T__14 = 15;
BKOOLParser.T__15 = 16;
BKOOLParser.T__16 = 17;
BKOOLParser.T__17 = 18;
BKOOLParser.T__18 = 19;
BKOOLParser.T__19 = 20;
BKOOLParser.T__20 = 21;
BKOOLParser.T__21 = 22;
BKOOLParser.T__22 = 23;
BKOOLParser.T__23 = 24;
BKOOLParser.T__24 = 25;
BKOOLParser.T__25 = 26;
BKOOLParser.T__26 = 27;
BKOOLParser.T__27 = 28;
BKOOLParser.T__28 = 29;
BKOOLParser.T__29 = 30;
BKOOLParser.T__30 = 31;
BKOOLParser.T__31 = 32;
BKOOLParser.T__32 = 33;
BKOOLParser.T__33 = 34;
BKOOLParser.T__34 = 35;
BKOOLParser.T__35 = 36;
BKOOLParser.T__36 = 37;
BKOOLParser.T__37 = 38;
BKOOLParser.T__38 = 39;
BKOOLParser.T__39 = 40;
BKOOLParser.T__40 = 41;
BKOOLParser.KW = 42;
BKOOLParser.KW_STATIC = 43;
BKOOLParser.KW_FINAL = 44;
BKOOLParser.OP = 45;
BKOOLParser.OP2 = 46;
BKOOLParser.DELI_SEMI = 47;
BKOOLParser.DELI = 48;
BKOOLParser.BOOL_LIT = 49;
BKOOLParser.FLOAT_LIT = 50;
BKOOLParser.INT_LIT = 51;
BKOOLParser.STR_LIT = 52;
BKOOLParser.ID = 53;
BKOOLParser.LP = 54;
BKOOLParser.RP = 55;
BKOOLParser.LB = 56;
BKOOLParser.RB = 57;
BKOOLParser.WS = 58;
BKOOLParser.LINE_CMT = 59;
BKOOLParser.BLOCK_CMT = 60;
BKOOLParser.OTHER = 61;

BKOOLParser.RULE_program = 0;
BKOOLParser.RULE_class_def = 1;
BKOOLParser.RULE_class_memlist = 2;
BKOOLParser.RULE_class_attr = 3;
BKOOLParser.RULE_class_attr_nonstatic = 4;
BKOOLParser.RULE_class_attr_types = 5;
BKOOLParser.RULE_decl_const = 6;
BKOOLParser.RULE_decl_var = 7;
BKOOLParser.RULE_id_list = 8;
BKOOLParser.RULE_decl_method = 9;
BKOOLParser.RULE_param_list = 10;
BKOOLParser.RULE_type_all = 11;
BKOOLParser.RULE_type_primitives = 12;
BKOOLParser.RULE_type_void = 13;
BKOOLParser.RULE_type_array = 14;
BKOOLParser.RULE_type_array_elem = 15;
BKOOLParser.RULE_type_class = 16;
BKOOLParser.RULE_expr_def = 17;
BKOOLParser.RULE_expr_relational = 18;
BKOOLParser.RULE_expr_bool = 19;
BKOOLParser.RULE_expr_arithmetic_addbin = 20;
BKOOLParser.RULE_expr_arithmetic_mulbin = 21;
BKOOLParser.RULE_expr_string = 22;
BKOOLParser.RULE_expr_bool_not = 23;
BKOOLParser.RULE_expr_arithmetic_add = 24;
BKOOLParser.RULE_expr_index = 25;
BKOOLParser.RULE_expr_member_access_params = 26;
BKOOLParser.RULE_expr_member_access = 27;
BKOOLParser.RULE_expr_object_creation = 28;
BKOOLParser.RULE_expr_term = 29;
BKOOLParser.RULE_expr_fragment_index = 30;
BKOOLParser.RULE_expr_fragment_memaccess = 31;
BKOOLParser.RULE_stmt_all = 32;
BKOOLParser.RULE_stmt_block = 33;
BKOOLParser.RULE_stmt_if = 34;
BKOOLParser.RULE_stmt_while = 35;
BKOOLParser.RULE_stmt_assign = 36;
BKOOLParser.RULE_stmt_lefthand = 37;
BKOOLParser.RULE_stmt_break = 38;
BKOOLParser.RULE_stmt_continue = 39;
BKOOLParser.RULE_stmt_return = 40;
BKOOLParser.RULE_stmt_method_invocation = 41;

function ProgramContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = BKOOLParser.RULE_program;
    return this;
}

ProgramContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ProgramContext.prototype.constructor = ProgramContext;

ProgramContext.prototype.EOF = function() {
    return this.getToken(BKOOLParser.EOF, 0);
};

ProgramContext.prototype.class_def = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(Class_defContext);
    } else {
        return this.getTypedRuleContext(Class_defContext,i);
    }
};

ProgramContext.prototype.enterRule = function(listener) {
    if(listener instanceof BKOOLListener ) {
        listener.enterProgram(this);
	}
};

ProgramContext.prototype.exitRule = function(listener) {
    if(listener instanceof BKOOLListener ) {
        listener.exitProgram(this);
	}
};




BKOOLParser.ProgramContext = ProgramContext;

BKOOLParser.prototype.program = function() {

    var localctx = new ProgramContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, BKOOLParser.RULE_program);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 85; 
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        do {
            this.state = 84;
            this.class_def();
            this.state = 87; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        } while(_la===BKOOLParser.T__0);
        this.state = 89;
        this.match(BKOOLParser.EOF);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function Class_defContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = BKOOLParser.RULE_class_def;
    this.className = null; // Token
    this.superClass = null; // Token
    return this;
}

Class_defContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Class_defContext.prototype.constructor = Class_defContext;

Class_defContext.prototype.LP = function() {
    return this.getToken(BKOOLParser.LP, 0);
};

Class_defContext.prototype.RP = function() {
    return this.getToken(BKOOLParser.RP, 0);
};

Class_defContext.prototype.ID = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(BKOOLParser.ID);
    } else {
        return this.getToken(BKOOLParser.ID, i);
    }
};


Class_defContext.prototype.class_memlist = function() {
    return this.getTypedRuleContext(Class_memlistContext,0);
};

Class_defContext.prototype.enterRule = function(listener) {
    if(listener instanceof BKOOLListener ) {
        listener.enterClass_def(this);
	}
};

Class_defContext.prototype.exitRule = function(listener) {
    if(listener instanceof BKOOLListener ) {
        listener.exitClass_def(this);
	}
};




BKOOLParser.Class_defContext = Class_defContext;

BKOOLParser.prototype.class_def = function() {

    var localctx = new Class_defContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, BKOOLParser.RULE_class_def);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 91;
        this.match(BKOOLParser.T__0);
        this.state = 92;
        localctx.className = this.match(BKOOLParser.ID);
        this.state = 95;
        _la = this._input.LA(1);
        if(_la===BKOOLParser.T__1) {
            this.state = 93;
            this.match(BKOOLParser.T__1);
            this.state = 94;
            localctx.superClass = this.match(BKOOLParser.ID);
        }

        this.state = 97;
        this.match(BKOOLParser.LP);
        this.state = 99;
        _la = this._input.LA(1);
        if((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << BKOOLParser.T__5) | (1 << BKOOLParser.T__6) | (1 << BKOOLParser.T__7) | (1 << BKOOLParser.T__8) | (1 << BKOOLParser.T__9))) !== 0) || ((((_la - 43)) & ~0x1f) == 0 && ((1 << (_la - 43)) & ((1 << (BKOOLParser.KW_STATIC - 43)) | (1 << (BKOOLParser.KW_FINAL - 43)) | (1 << (BKOOLParser.ID - 43)))) !== 0)) {
            this.state = 98;
            this.class_memlist();
        }

        this.state = 101;
        this.match(BKOOLParser.RP);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function Class_memlistContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = BKOOLParser.RULE_class_memlist;
    return this;
}

Class_memlistContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Class_memlistContext.prototype.constructor = Class_memlistContext;

Class_memlistContext.prototype.class_attr = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(Class_attrContext);
    } else {
        return this.getTypedRuleContext(Class_attrContext,i);
    }
};

Class_memlistContext.prototype.decl_method = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(Decl_methodContext);
    } else {
        return this.getTypedRuleContext(Decl_methodContext,i);
    }
};

Class_memlistContext.prototype.enterRule = function(listener) {
    if(listener instanceof BKOOLListener ) {
        listener.enterClass_memlist(this);
	}
};

Class_memlistContext.prototype.exitRule = function(listener) {
    if(listener instanceof BKOOLListener ) {
        listener.exitClass_memlist(this);
	}
};




BKOOLParser.Class_memlistContext = Class_memlistContext;

BKOOLParser.prototype.class_memlist = function() {

    var localctx = new Class_memlistContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, BKOOLParser.RULE_class_memlist);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 105; 
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        do {
            this.state = 105;
            var la_ = this._interp.adaptivePredict(this._input,3,this._ctx);
            switch(la_) {
            case 1:
                this.state = 103;
                this.class_attr();
                break;

            case 2:
                this.state = 104;
                this.decl_method();
                break;

            }
            this.state = 107; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        } while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << BKOOLParser.T__5) | (1 << BKOOLParser.T__6) | (1 << BKOOLParser.T__7) | (1 << BKOOLParser.T__8) | (1 << BKOOLParser.T__9))) !== 0) || ((((_la - 43)) & ~0x1f) == 0 && ((1 << (_la - 43)) & ((1 << (BKOOLParser.KW_STATIC - 43)) | (1 << (BKOOLParser.KW_FINAL - 43)) | (1 << (BKOOLParser.ID - 43)))) !== 0));
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function Class_attrContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = BKOOLParser.RULE_class_attr;
    this.decl = null; // Class_attr_nonstaticContext
    return this;
}

Class_attrContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Class_attrContext.prototype.constructor = Class_attrContext;

Class_attrContext.prototype.class_attr_nonstatic = function() {
    return this.getTypedRuleContext(Class_attr_nonstaticContext,0);
};

Class_attrContext.prototype.KW_STATIC = function() {
    return this.getToken(BKOOLParser.KW_STATIC, 0);
};

Class_attrContext.prototype.enterRule = function(listener) {
    if(listener instanceof BKOOLListener ) {
        listener.enterClass_attr(this);
	}
};

Class_attrContext.prototype.exitRule = function(listener) {
    if(listener instanceof BKOOLListener ) {
        listener.exitClass_attr(this);
	}
};




BKOOLParser.Class_attrContext = Class_attrContext;

BKOOLParser.prototype.class_attr = function() {

    var localctx = new Class_attrContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, BKOOLParser.RULE_class_attr);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 110;
        _la = this._input.LA(1);
        if(_la===BKOOLParser.KW_STATIC) {
            this.state = 109;
            this.match(BKOOLParser.KW_STATIC);
        }

        this.state = 112;
        localctx.decl = this.class_attr_nonstatic();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function Class_attr_nonstaticContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = BKOOLParser.RULE_class_attr_nonstatic;
    this.attrConst = null; // Decl_constContext
    this.attrVars = null; // Decl_varContext
    return this;
}

Class_attr_nonstaticContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Class_attr_nonstaticContext.prototype.constructor = Class_attr_nonstaticContext;

Class_attr_nonstaticContext.prototype.decl_const = function() {
    return this.getTypedRuleContext(Decl_constContext,0);
};

Class_attr_nonstaticContext.prototype.decl_var = function() {
    return this.getTypedRuleContext(Decl_varContext,0);
};

Class_attr_nonstaticContext.prototype.enterRule = function(listener) {
    if(listener instanceof BKOOLListener ) {
        listener.enterClass_attr_nonstatic(this);
	}
};

Class_attr_nonstaticContext.prototype.exitRule = function(listener) {
    if(listener instanceof BKOOLListener ) {
        listener.exitClass_attr_nonstatic(this);
	}
};




BKOOLParser.Class_attr_nonstaticContext = Class_attr_nonstaticContext;

BKOOLParser.prototype.class_attr_nonstatic = function() {

    var localctx = new Class_attr_nonstaticContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, BKOOLParser.RULE_class_attr_nonstatic);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 116;
        switch(this._input.LA(1)) {
        case BKOOLParser.KW_FINAL:
            this.state = 114;
            localctx.attrConst = this.decl_const();
            break;
        case BKOOLParser.ID:
            this.state = 115;
            localctx.attrVars = this.decl_var();
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
        this.state = 118;
        this.match(BKOOLParser.DELI_SEMI);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function Class_attr_typesContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = BKOOLParser.RULE_class_attr_types;
    this.t0 = null; // Type_arrayContext
    this.t1 = null; // Type_primitivesContext
    this.t2 = null; // Type_classContext
    return this;
}

Class_attr_typesContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Class_attr_typesContext.prototype.constructor = Class_attr_typesContext;

Class_attr_typesContext.prototype.type_array = function() {
    return this.getTypedRuleContext(Type_arrayContext,0);
};

Class_attr_typesContext.prototype.type_primitives = function() {
    return this.getTypedRuleContext(Type_primitivesContext,0);
};

Class_attr_typesContext.prototype.type_class = function() {
    return this.getTypedRuleContext(Type_classContext,0);
};

Class_attr_typesContext.prototype.enterRule = function(listener) {
    if(listener instanceof BKOOLListener ) {
        listener.enterClass_attr_types(this);
	}
};

Class_attr_typesContext.prototype.exitRule = function(listener) {
    if(listener instanceof BKOOLListener ) {
        listener.exitClass_attr_types(this);
	}
};




BKOOLParser.Class_attr_typesContext = Class_attr_typesContext;

BKOOLParser.prototype.class_attr_types = function() {

    var localctx = new Class_attr_typesContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, BKOOLParser.RULE_class_attr_types);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 123;
        var la_ = this._interp.adaptivePredict(this._input,7,this._ctx);
        switch(la_) {
        case 1:
            this.state = 120;
            localctx.t0 = this.type_array();
            break;

        case 2:
            this.state = 121;
            localctx.t1 = this.type_primitives();
            break;

        case 3:
            this.state = 122;
            localctx.t2 = this.type_class();
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function Decl_constContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = BKOOLParser.RULE_decl_const;
    this.constType = null; // Class_attr_typesContext
    this.id = null; // Token
    this.expr = null; // Expr_defContext
    return this;
}

Decl_constContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Decl_constContext.prototype.constructor = Decl_constContext;

Decl_constContext.prototype.KW_FINAL = function() {
    return this.getToken(BKOOLParser.KW_FINAL, 0);
};

Decl_constContext.prototype.class_attr_types = function() {
    return this.getTypedRuleContext(Class_attr_typesContext,0);
};

Decl_constContext.prototype.ID = function() {
    return this.getToken(BKOOLParser.ID, 0);
};

Decl_constContext.prototype.expr_def = function() {
    return this.getTypedRuleContext(Expr_defContext,0);
};

Decl_constContext.prototype.enterRule = function(listener) {
    if(listener instanceof BKOOLListener ) {
        listener.enterDecl_const(this);
	}
};

Decl_constContext.prototype.exitRule = function(listener) {
    if(listener instanceof BKOOLListener ) {
        listener.exitDecl_const(this);
	}
};




BKOOLParser.Decl_constContext = Decl_constContext;

BKOOLParser.prototype.decl_const = function() {

    var localctx = new Decl_constContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, BKOOLParser.RULE_decl_const);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 125;
        this.match(BKOOLParser.KW_FINAL);
        this.state = 126;
        localctx.constType = this.class_attr_types();
        this.state = 127;
        localctx.id = this.match(BKOOLParser.ID);
        this.state = 128;
        this.match(BKOOLParser.T__2);
        this.state = 129;
        localctx.expr = this.expr_def();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function Decl_varContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = BKOOLParser.RULE_decl_var;
    this.idlist = null; // Id_listContext
    this.varType = null; // Class_attr_typesContext
    return this;
}

Decl_varContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Decl_varContext.prototype.constructor = Decl_varContext;

Decl_varContext.prototype.id_list = function() {
    return this.getTypedRuleContext(Id_listContext,0);
};

Decl_varContext.prototype.class_attr_types = function() {
    return this.getTypedRuleContext(Class_attr_typesContext,0);
};

Decl_varContext.prototype.enterRule = function(listener) {
    if(listener instanceof BKOOLListener ) {
        listener.enterDecl_var(this);
	}
};

Decl_varContext.prototype.exitRule = function(listener) {
    if(listener instanceof BKOOLListener ) {
        listener.exitDecl_var(this);
	}
};




BKOOLParser.Decl_varContext = Decl_varContext;

BKOOLParser.prototype.decl_var = function() {

    var localctx = new Decl_varContext(this, this._ctx, this.state);
    this.enterRule(localctx, 14, BKOOLParser.RULE_decl_var);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 131;
        localctx.idlist = this.id_list();
        this.state = 132;
        this.match(BKOOLParser.T__3);
        this.state = 133;
        localctx.varType = this.class_attr_types();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function Id_listContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = BKOOLParser.RULE_id_list;
    return this;
}

Id_listContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Id_listContext.prototype.constructor = Id_listContext;

Id_listContext.prototype.ID = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(BKOOLParser.ID);
    } else {
        return this.getToken(BKOOLParser.ID, i);
    }
};


Id_listContext.prototype.enterRule = function(listener) {
    if(listener instanceof BKOOLListener ) {
        listener.enterId_list(this);
	}
};

Id_listContext.prototype.exitRule = function(listener) {
    if(listener instanceof BKOOLListener ) {
        listener.exitId_list(this);
	}
};




BKOOLParser.Id_listContext = Id_listContext;

BKOOLParser.prototype.id_list = function() {
